--- a/Project.toml
+++ b/Project.toml
@@ -1,2 +1,11 @@
+name = "libMad"
+uuid = "3cb06f27-fa54-49c1-aeea-14d13a711cb4"
+authors = ["Anton Edvinovich Pozharskiy <anton.pozharskiy@imtek.uni-freiburg.de>"]
+version = "0.1.0"
+
 [deps]
+InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 MadNLP = "2621e9c9-9eb4-46b1-8089-e8c72242dfb6"
+
+[compat]
+InteractiveUtils = "1.11.0"
