generating header automatically, and skeleton of c example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,17 @@ add_custom_command(
   COMMAND ${JULIA_EXECUTABLE} --project=${PROJECT_SOURCE_DIR} --startup-file=no ${JULIAC_EXECUTABLE} ${PROJECT_SOURCE_DIR}/src/libMad.jl --compile-ccallable --experimental --trim=no --output-lib ${PROJECT_BINARY_DIR}/libMad
   DEPENDS ${PROJECT_SOURCE_DIR}/src/libMad.jl
   ${PROJECT_SOURCE_DIR}/src/options.jl
+  ${PROJECT_SOURCE_DIR}/src/solver.jl
+  ${PROJECT_SOURCE_DIR}/src/madnlp.jl
+  ${PROJECT_SOURCE_DIR}/src/nlpmodels.jl
+)
+
+add_custom_command(
+  OUTPUT ${PROJECT_BINARY_DIR}/libMad.h
+  COMMAND ${JULIA_EXECUTABLE} --project=${PROJECT_SOURCE_DIR} --startup-file=no ${PROJECT_SOURCE_DIR}/scripts/generate_headers.jl ${PROJECT_BINARY_DIR}
+  DEPENDS ${PROJECT_SOURCE_DIR}/src/libMad.jl
+  ${PROJECT_SOURCE_DIR}/src/options.jl
+  ${PROJECT_SOURCE_DIR}/src/solver.jl
   ${PROJECT_SOURCE_DIR}/src/madnlp.jl
   ${PROJECT_SOURCE_DIR}/src/nlpmodels.jl
 )
@@ -86,4 +97,5 @@ add_custom_command(
 add_custom_target(
   libMad ALL
   DEPENDS ${PROJECT_BINARY_DIR}/libMad.so
+  ${PROJECT_BINARY_DIR}/libMad.h
 )
