--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,7 @@ endif()
 
 add_custom_command(
   OUTPUT ${PROJECT_BINARY_DIR}/libMad.so
-  COMMAND ${JULIA_EXECUTABLE} --project=${PROJECT_SOURCE_DIR} --startup-file=no ${JULIAC_EXECUTABLE} ${PROJECT_SOURCE_DIR}/src/libMad.jl --compile-ccallable --experimental --trim=no --output-lib ${PROJECT_BINARY_DIR}/libMad
+  COMMAND ${JULIA_EXECUTABLE} --project=${PROJECT_SOURCE_DIR} --startup-file=no ${JULIAC_EXECUTABLE} ${PROJECT_SOURCE_DIR}/src/libMad.jl --compile-ccallable --verbose --experimental --trim=no --output-lib ${PROJECT_BINARY_DIR}/libMad
   DEPENDS ${PROJECT_SOURCE_DIR}/src/libMad.jl
   ${PROJECT_SOURCE_DIR}/src/options.jl
   ${PROJECT_SOURCE_DIR}/src/solver.jl
