--- a/Project.toml
+++ b/Project.toml
@@ -5,13 +5,16 @@ authors = ["Anton Edvinovich Pozharskiy <anton.pozharskiy@imtek.uni-freiburg.de>
 
 [deps]
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
+MadIPM = "4406d55e-1099-4ca6-ac6a-6cf051b10024"
 MadNLP = "2621e9c9-9eb4-46b1-8089-e8c72242dfb6"
 NLPModels = "a4795742-8479-5a88-8948-cc11e1c8c1a6"
 PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
+QuadraticModels = "f468eda6-eac5-11e8-05a5-ff9e497bcd19"
 SolverCore = "ff4d7338-4cf1-434d-91df-b86cb86fb843"
 
 [compat]
 InteractiveUtils = "1.11.0"
 NLPModels = "0.21.5"
 PrecompileTools = "1.3.2"
+QuadraticModels = "0.9.13"
 SolverCore = "0.3.8"
