--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,10 +76,11 @@ endif()
 
 add_custom_command(
   OUTPUT ${PROJECT_BINARY_DIR}/libMad.so
-  COMMAND juliac --project ${PROJECT_SOURCE_DIR} --compile-ccallable --verbose --experimental --trim=no --output-lib ${PROJECT_BINARY_DIR}/libMad ${PROJECT_SOURCE_DIR}/src/recipe.jl
+  COMMAND juliac --project ${PROJECT_SOURCE_DIR} --compile-ccallable --experimental --trim=no --output-lib ${PROJECT_BINARY_DIR}/libMad ${PROJECT_SOURCE_DIR}/src/recipe.jl
   DEPENDS ${PROJECT_SOURCE_DIR}/src/libMad.jl
   ${PROJECT_SOURCE_DIR}/src/options.jl
   ${PROJECT_SOURCE_DIR}/src/solver.jl
+  ${PROJECT_SOURCE_DIR}/src/stats.jl
   ${PROJECT_SOURCE_DIR}/src/madnlp.jl
   ${PROJECT_SOURCE_DIR}/src/nlpmodels.jl
 )
@@ -89,6 +90,8 @@ add_custom_command(
   COMMAND ${JULIA_EXECUTABLE} --project=${PROJECT_SOURCE_DIR} --startup-file=no ${PROJECT_SOURCE_DIR}/scripts/generate_headers.jl ${PROJECT_BINARY_DIR}
   DEPENDS ${PROJECT_SOURCE_DIR}/src/libMad.jl
   ${PROJECT_SOURCE_DIR}/src/options.jl
+  ${PROJECT_SOURCE_DIR}/src/solver.jl
+  ${PROJECT_SOURCE_DIR}/src/stats.jl
   ${PROJECT_SOURCE_DIR}/src/madnlp.jl
   ${PROJECT_SOURCE_DIR}/src/nlpmodels.jl
 )
