--- a/Project.toml
+++ b/Project.toml
@@ -4,14 +4,19 @@ version = "0.1.0"
 authors = ["Anton Edvinovich Pozharskiy <anton.pozharskiy@imtek.uni-freiburg.de>"]
 
 [deps]
+HSL_jll = "017b0a0e-03f4-516a-9b91-836bbd1904dd"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 MadNLP = "2621e9c9-9eb4-46b1-8089-e8c72242dfb6"
+MadNLPGPU = "d72a61cc-809d-412f-99be-fd81f4b8a598"
+MadNLPHSL = "7fb6135f-58fe-4112-84ca-653cf5be0c77"
 NLPModels = "a4795742-8479-5a88-8948-cc11e1c8c1a6"
 PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 SolverCore = "ff4d7338-4cf1-434d-91df-b86cb86fb843"
 
 [compat]
 InteractiveUtils = "1.11.0"
+MadNLPGPU = "0.7.16"
+MadNLPHSL = "0.6.0"
 NLPModels = "0.21.5"
 PrecompileTools = "1.3.2"
 SolverCore = "0.3.8"
