--- a/.github/workflows/build_dist.yml
+++ b/.github/workflows/build_dist.yml
@@ -19,5 +19,7 @@ jobs:
       run: julia -e 'using Pkg; Pkg.add("JuliaC"); Pkg.Apps.add("JuliaC")'
     - name: add JuliaC to path
       run: echo "$HOME/.julia/bin" >> "$GITHUB_PATH"
-    - name: build
+    - name: dev libmad
+      run: julia -e 'using Pkg; Pkg.dev(".")'
+    - name: 
       run: mkdir build && cd build && cmake .. && make
