--- a/.github/workflows/build_dist.yml
+++ b/.github/workflows/build_dist.yml
@@ -1,14 +1,13 @@
 name: dist
 on: workflow_dispatch
 jobs:
-  build:
-    name: Build Linux binaries -  ${{ matrix.os }} $
-    runs-on: ${{ matrix.os }}
+  build_linux:
+    name: Build binaries - ubuntu-latest
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-          os: [ubuntu-latest]
-          julia-version: ['1']
+        julia-version: ['1']
     steps:
     - uses: actions/checkout@v4
     - uses: julia-actions/install-juliaup@v2
@@ -22,8 +21,26 @@ jobs:
     - name: build libMad
       run: mkdir build && cd build && cmake .. && make
     - name: tar output
-      run: tar -czf libMad-${{ matrix.os }}.tar.gz build/lib/ build/share/ build/include/ build/basic_problem
+      run: tar -czf libMad-ubuntu-latest.tar.gz build/lib/ build/share/ build/include/ build/basic_problem
     - uses: actions/upload-artifact@v4
       with:
-        name: libMad-${{ matrix.os }}
-        path: libMad-${{ matrix.os }}.tar.gz
+        name: libMad-ubuntu-latest
+        path: libMad-ubuntu-latest.tar.gz
+  build_windows:
+    name: Build binaries - windows-latest
+    runs-on: windows-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        julia-version: ['1']
+    steps:
+    - uses: actions/checkout@v4
+    - uses: julia-actions/install-juliaup@v2
+      with:
+        channel: ${{ matrix.julia-version }}
+    - name: install JuliaC
+      run: julia -e 'using Pkg; Pkg.add(url="https://github.com/apozharski/JuliaC.jl.git"); Pkg.Apps.add(url="https://github.com/apozharski/JuliaC.jl.git")'
+    - name: add JuliaC to path
+      run: "$env:HOMEPATH/.julia/bin" | Out-File -FilePath "$env:GITHUB_PATH" -Append
+    - name: build libMad
+      run: mkdir build && cd build && cmake .. && make
