improvements to tarball creation and windows debugging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ if (JULIA_EXECUTABLE STREQUAL "julia")
       OUTPUT_VARIABLE JULIA_EXECUTABLE_PARSED
       WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
     )
+    message("Julia executable: ${JULIA_EXECUTABLE_PARSED}")
   endif()
   set(JULIA_EXECUTABLE ${JULIA_EXECUTABLE_PARSED} CACHE STRING "Julia executable" FORCE)
 endif()
@@ -58,6 +59,7 @@ if(NOT DEFINED JULIA_VERSION)
     OUTPUT_VARIABLE JULIA_VERSION_FULL
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
   )
+  message("Raw Julia version: ${JULIA_VERSION_FULL}")
   string(
     REGEX REPLACE
     "^julia version (.*)"
