debug more cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ if (JULIA_EXECUTABLE STREQUAL "julia")
   elseif(WIN32)
     execute_process(
       COMMAND where.exe julia
+      COMMAND_ECHO STDOUT
       OUTPUT_STRIP_TRAILING_WHITESPACE
       OUTPUT_VARIABLE JULIA_EXECUTABLE_PARSED
       WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
