why are some interfaces flipped in cmake :(

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,7 @@ if (JULIA_EXECUTABLE STREQUAL "julia")
       WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
     )
     string(REGEX MATCH "(.*)\n" JULIA_EXECUTABLE_PARSED ${JULIA_EXECUTABLE_PARSED})
-    string(STRIP JULIA_EXECUTABLE_PARSED ${JULIA_EXECUTABLE_PARSED})
+    string(STRIP ${JULIA_EXECUTABLE_PARSED} JULIA_EXECUTABLE_PARSED)
     message("Julia executable: ${JULIA_EXECUTABLE_PARSED}")
   endif()
   set(JULIA_EXECUTABLE ${JULIA_EXECUTABLE_PARSED} CACHE STRING "Julia executable" FORCE)
