try different project to see if windows is failing to capture it for some reason

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,7 +165,7 @@ add_custom_command(
 
 add_custom_command(
   OUTPUT ${LIBMAD_HEADER}
-  COMMAND ${JULIA_EXECUTABLE} --project=${PROJECT_SOURCE_DIR} --startup-file=no ${LIBMAD_GENERATE_HEADERS_SCRIPT} ${LIBMAD_HEADER_PATH}
+  COMMAND ${JULIA_EXECUTABLE} --project --startup-file=no ${LIBMAD_GENERATE_HEADERS_SCRIPT} ${LIBMAD_HEADER_PATH}
   DEPENDS ${LIBMAD_HEADER_DEPENDENCIES}
 )
 
