if always for dubug print

--- a/.github/workflows/build_dist.yml
+++ b/.github/workflows/build_dist.yml
@@ -50,4 +50,5 @@ jobs:
     - name: build libMad
       run: mkdir build && cd build && mkdir install && cmake .. -DCMAKE_INSTALL_PREFIX="install" && cmake --build . --target INSTALL
     - name: debug print
+      if: always()
       run: dir /s
