--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,7 +116,7 @@ endif()
 file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/include")
 
 # SETUP VARIABLES BECAUSE WINDOWS IS HORRIBLE:
-set(LIBMAD_SHARED_LIBRARY ${PROJECT_BINARY_DIR}/lib/libMad.so)
+set(LIBMAD_SHARED_LIBRARY ${PROJECT_BINARY_DIR}/lib/libMad.${CMAKE_SHARED_LIBRARY_SUFFIX})
 set(LIBMAD_HEADER ${PROJECT_BINARY_DIR}/include/libMad.h)
 set(LIBMAD_SHARED_LIBRARY_PATH ${PROJECT_BINARY_DIR}/lib)
 set(LIBMAD_HEADER_PATH ${PROJECT_BINARY_DIR}/include)
