fix lib to bin on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,9 +116,14 @@ endif()
 file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/include")
 
 # SETUP VARIABLES BECAUSE WINDOWS IS HORRIBLE:
-set(LIBMAD_SHARED_LIBRARY ${PROJECT_BINARY_DIR}/lib/libMad${CMAKE_SHARED_LIBRARY_SUFFIX})
+if(LINUX)
+  set(LIBMAD_SHARED_LIBRARY ${PROJECT_BINARY_DIR}/lib/libMad${CMAKE_SHARED_LIBRARY_SUFFIX})
+  set(LIBMAD_SHARED_LIBRARY_PATH ${PROJECT_BINARY_DIR}/lib)
+elseif(WIN32)
+  set(LIBMAD_SHARED_LIBRARY ${PROJECT_BINARY_DIR}/bin/libMad${CMAKE_SHARED_LIBRARY_SUFFIX})
+  set(LIBMAD_SHARED_LIBRARY_PATH ${PROJECT_BINARY_DIR}/bin)
+endif()
 set(LIBMAD_HEADER ${PROJECT_BINARY_DIR}/include/libMad.h)
-set(LIBMAD_SHARED_LIBRARY_PATH ${PROJECT_BINARY_DIR}/lib)
 set(LIBMAD_HEADER_PATH ${PROJECT_BINARY_DIR}/include)
 set(LIBMAD_BUNDLE_PATH ${PROJECT_BINARY_DIR}/share)
 set(LIBMAD_SHARED_LIBRARY_DEPENDENCIES
